--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,16 @@ authors = ["Edward Shen <code@eddie.sh>"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[profile.release]
+lto = true
+codegen-units = 1
 
 [dependencies]
 hashbrown = "0.11"
+
+# [dev-dependencies]
+# criterion = "0.3"
+
+# [[bench]]
+# name = "scaling"
+# harness = false
