--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,9 @@ codegen-units = 1
 [dependencies]
 hashbrown = "0.11"
 
-# [dev-dependencies]
-# criterion = "0.3"
+[dev-dependencies]
+criterion = "0.3"
 
-# [[bench]]
-# name = "scaling"
-# harness = false
+[[bench]]
+name = "scaling"
+harness = false
