--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,13 @@
 [package]
 name = "lfu-cache"
+description = "A simple constant time LFU cache implementation"
 version = "0.1.0"
 authors = ["Edward Shen <code@eddie.sh>"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
+repository = "https://github.com/edward-shen/lfu-cache"
+keywords = ["lfu", "cache", "least", "frequently", "used"]
+categories = ["data-structures", "caching"]
 include = ["src/lib.rs", "LICENSE-*", "README.md"]
 
 [profile.release]
