--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,7 +20,5 @@ jobs:
       run: cargo clippy
     - name: Build
       run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
-    - name: Run miri
+    - name: Run miri tests
       run: cargo +nightly miri test
